# include-it

./: API.rst  HISTORY.rst  README.rst  include_it.py  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
include_it/: __init__.py
tests/: __init__.py  test_include_it.py
